navigation fix transition on safarigit add .

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -32,11 +32,14 @@
 	bottom: 0;
 	background-color: green;
 	transform: translate3d(-100%,0,0);
+	-webkit-transform: translate3d(-100%,0,0);
 	transition: transform 400ms ease;
+	-webkit-transition: -webkit-transform 400ms ease;
 	z-index: 10;
 }
 
 .transitonNavigationLinks {
+	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
 
